UIP-941 DragDropTable component
Change-Id: I4381eab0faf374bc980df35669bd924540b49e08

--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -26,6 +26,7 @@
 @import 'multivalues';
 @import 'pagination';
 @import 'progress-indicators';
+@import 'reports';
 @import 'result-sets';
 @import 'row-selector';
 @import 'settings-sections';
