UIP-917 --> LeftNavBar copyright image is hardcoded
Change-Id: I94d175092ff5cd1cf1b6b46352210aa0f55cd62f

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -373,6 +373,14 @@ $layout-nav-width-offset: 15px;
             margin: 0 0 7px;
             fill: $color-elephant;
         }
+        // application logos
+        .logo-container {
+            @include clearfix();
+            .ping-application {
+                max-width: 175px;
+                height: auto;
+            }
+        }
     }
     &.scrollable {
         .copyright {
