UIP-923, UIP-979, UIP-982, UIP-1004, UIP-1005 --> FormTextArea rows prop limited by css height; DetailTooltip warning fix; Data lists label; Spacing between stacked checkboxes; Content of expandable rows not lined up
Change-Id: Ibd9f3d36eee042dbfe089fc934edfcd6d125257a

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -209,6 +209,7 @@ label {
         textarea {
             padding: 12px 15px;
             line-height: 1.2em;
+            height: auto;
         }
         &.extended {
             textarea {
@@ -348,6 +349,7 @@ label {
         }
         &.stacked {
             display: block;
+            margin-bottom: 10px;
 
             .icon {
                 top: -1px;
