--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1629,11 +1629,17 @@ input[type=file] {
     }
 
     &.input-text {
-        input[type=text] {
+        input[type=text],
+        input[type=password] {
             border-color: $color-input-error;
 
             &:focus {
                 @include errorDisplayCss;
+            }
+        }
+        &.required {
+            a.password-show-button {
+                right: 35px;
             }
         }
     }
@@ -1799,7 +1805,8 @@ input[type=file] {
             right: 0;
         }
         &.input-text {
-            input[type=text] {
+            input[type=text],
+            input[type=password] {
                 width: $input-width;
             }
         }
