UIP-1010 : Tweak reporting CSS Tweak primary page controls spacing
Change-Id: I3b88706ce21af56eb06fec89ace36a9b0b5b9dcf

--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -19,6 +19,7 @@
         font-family: $font-pn-regular;
     }
     > .collapsible-section-content {
+        position: relative;
         overflow: hidden;
         max-height: 0;
 
