SSD-3329 : tweaks to reporting styles / move reporting css from inputs.scss to reports.scss Tighten input CSS causing issues in WP
Change-Id: I460cf9be46d0e1a16a6f28f162e916d100117be3

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1477,7 +1477,7 @@ input[type=file] {
         input[type=text] {
             @include requiredPadding;
         }
-        .input-container {
+        > .input-container {
             &:before {
                 @include requiredCss;
                 top: 5px;
@@ -1498,7 +1498,7 @@ input[type=file] {
         textarea {
             @include requiredPadding;
         }
-        .input-container {
+        > .input-container {
             &:before {
                 @include requiredCss;
                 top: 5px;
@@ -2075,78 +2075,6 @@ input[type=file] {
             right: 1px;
         }
     }
-}
-
-.report-filters {
-    $border-color: $color-dolphin;
-    $background-color: $color-white;
-    $input-margin: 15px;
-
-    position: relative;
-    padding: 20px 20px 0;
-    background-color: $color-timberwolf;
-
-    .input-select,
-    .input-textselect,
-    .input-text,
-    .input-calendar,
-    .input-timezone {
-        margin-bottom: 20px;
-    }
-    .input-text,
-    .input-textselect {
-        margin: 0 $input-margin 0 0;
-        vertical-align: bottom;
-
-        input[type=text] {
-            background: $background-color;
-            border-color: $border-color;
-        }
-    }
-    .input-select {
-        margin: 0 $input-margin 0 0;
-        vertical-align: bottom;
-
-        .wrapper {
-            background: $background-color;
-            border-color: $border-color;
-        }
-        .selected-option,
-        .select-list {
-            background: $background-color;
-        }
-        .select-list {
-            .select-option:hover {
-                background: $color-elderly;
-            }
-        }
-    }
-    .input-timezone {
-        vertical-align: bottom;
-    }
-    .input-calendar input[type=text].input-calendar-value {
-        width: 145px;
-    }
-
-    .divider {
-        display: inline-block;
-        width: 1px;
-        height: 81px;
-        margin: -10px $input-margin 5px 0;
-        background-color: $color-stratus;
-        vertical-align: top;
-    }
-    .more-option-inputs {
-        border-top: 1px solid $color-dolphin;
-        padding: 20px 0 0;
-    }
-    button.primary {
-        margin: 20px 0 20px 15px;
-    }
-}
-
-.reporting-more-options-link {
-    margin: 15px 0 30px;
 }
 
 a {
