--- a/packages/ui-library/src/css/reports.scss
+++ b/packages/ui-library/src/css/reports.scss
@@ -19,7 +19,7 @@
         display: table-cell;
     }
 
-    .container {
+    .dd-table-container {
         text-align: left;
         max-height: 600px;
         overflow: auto;
@@ -100,7 +100,7 @@
         }
     }
     &.fixed-head {
-        .container {
+        .dd-table-container {
             margin-top: 52px;
             .thead {
                 position: absolute;
@@ -120,7 +120,7 @@
         }
     }
     &.infinite-scroll-container {
-        .container {
+        .dd-table-container {
             max-height: none;
             .table {
                 display: inline-block;
@@ -134,7 +134,6 @@
             }
             .batch {
                 display: table;
-                //table-layout: fixed;
                 overflow: hidden;
                 > div {
                     display: table-row-group;
