Add uilib-temp css missing from WP
Change-Id: Ib6e50d8f83974347bd96b458edf3392a9fdf5608

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2458,9 +2458,9 @@ label {
         }
         .tooltip-menu-search-clear {
             position: absolute;
-            top: 12px;
+            top: 14px;
             right: 14px;
-            font-size: 12px;
+            font-size: 11px;
 
             &:before {
                 content: 'X';
@@ -2478,6 +2478,7 @@ label {
     @include tooltip-menu;
 
     .collapsible-link {
+        line-height: 40px;
         text-transform: none;
         padding: 0;
     }
