SSD-3329 : a couple more tweaks/fixes to the reporting css per Chad
Change-Id: I29e1469ef4bffd59dd675f4cd3c4740037a978a6

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2064,6 +2064,11 @@ input[type=file] {
     }
 }
 
+.input-selectionfilter {
+    display: inline-block;
+    margin: 0 15px 20px 0;
+}
+
 a {
     &.input-link {
         display: block;
