UIP-969, UIP-1028, UIP-981 --> Conditional Fieldset -- border alignment off for radio buttons; Left padding difference for required FormTextField components with value entered; Collapsible Form Sections -- Need spacing between headings and content
Change-Id: I13f8b880c09f04ac1df5189a9cd464c22e5a0a83

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -574,6 +574,9 @@ fieldset {
                 &:last-of-type {
                     margin-right: 0;
                 }
+                .label-text {
+                    margin-bottom: 0;
+                }
             }
         }
     }
@@ -1578,22 +1581,12 @@ input[type=file] {
                 width: 0;
             }
         }
-        &.input-text {
-            input {
-                @include requiredPaddingEntered;
-            }
-        }
-        &.input-textarea {
-            textarea {
-                @include requiredPaddingEntered;
-            }
-        }
         &.input-multivalues {
             @include requiredPaddingEntered;
         }
         &.input-select {
             select {
-                padding-left: 10px;
+                padding-left: 15px;
             }
         }
     }
