fix for scrollbar on batch
Change-Id: I13deabba3ec7684b0f9b1984dacad396744c46ea

--- a/packages/ui-library/src/css/reports.scss
+++ b/packages/ui-library/src/css/reports.scss
@@ -274,6 +274,7 @@
                 overflow: hidden;
                 border-bottom: 1px dashed $color-stone;
                 overflow-y: visible;
+                margin-right: 1px;
                 > div {
                     display: table-row-group;
                     > div {
