UIP-1061 : update file-upload component to show basic usage of the stateless component (with the appropriate warnings)
Change-Id: I3ddc08b0a8e1e35faa741c92a1da566c85b1adf7

--- a/packages/ui-library/src/demo/css/layout.scss
+++ b/packages/ui-library/src/demo/css/layout.scss
@@ -216,6 +216,17 @@ $sidenav-lineheight: 22px;
 		}
 	}
 }
+
+.attention {
+    position: relative;
+    margin: 15px 0 30px;
+    padding: 10px;
+    color: $color-walrus;
+    border-left: 10px solid $color-warning-yellow;
+    background: $color-elderly;
+    font-family: $font-pn-regular;
+}
+
 input[type=text], input[type=password], textarea {
 	width: 340px;
 }
