UIP-1103 --> Fix opacity of help icon on disabled label
Change-Id: Ie5472a63a95f6a21d3b0a003e0fd75115c09941c

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1831,6 +1831,7 @@ input[type=file] {
 
 .disabled {
     $disabled-opacity: 0.4;
+    $normal-opacity: 1.0;
 
     font-style: normal;
     cursor: default;
@@ -1849,6 +1850,9 @@ input[type=file] {
         .label-text {
             span {
                 @include opacity($disabled-opacity);
+                &.icon-help {
+                    @include opacity($normal-opacity);
+                }
             }
         }
     }
@@ -1860,6 +1864,9 @@ input[type=file] {
         .label-text {
             span {
                 @include opacity($disabled-opacity);
+                &.icon-help {
+                    @include opacity($normal-opacity);
+                }
             }
         }
     }
