UIP-1081 --> Add ability to disable RockerButton component; Show ConditionalFieldset in disabled state for demo
Change-Id: I04952a83c513b3fbb532369963f9bdd823cda642

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -341,6 +341,13 @@ button.ellipsis-loader-button {
             border-width: 1px;
         }
     }
+    &.disabled {
+        @include opacity(0.4);
+        cursor: default;
+        label {
+            pointer-events: none;
+        }
+    }
     &.sel-0 {
         label {
             &:nth-of-type(1) {
